# AriOps

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/ariops/: __init__.py  config.py  main.py
src/ariops/api/: __init__.py  health.py  incidents.py
src/ariops/application/: __init__.py  evidence_collection.py  investigations.py  tools.py
src/ariops/domain/: incidents.py  tools.py
src/ariops/infrastructure/: __init__.py
src/ariops/infrastructure/k8s/: __init__.py  fake_tools.py  tool_definitions.py
tests/: __init__.py  test_evidence_collection.py  test_fake_k8s_tools.py  test_health.py  test_incident_domain.py  test_investigate_incident.py  test_k8s_tool_definitions.py  test_tool_registry.py
